# Other contributors are listed alongside their changes
# Home page: https://github.com/metlov/cycle
#======================================================================
0.3.3 (unreleased)
    - fixed the Note dialog
    - merged the actions of LMB and RMB on calendar to make it easier
      to operate on it from touchscreen devices
    - fixed some more integer divisions
0.3.2 (13.10.2022)
    - removed outdated Readme.Debian
    - converted README files to Markdown
    - fix heading syntax in README.ru.md
    - readded forgotten export.png bitmap from Ana Guerrero López
    - added gitignore file

    from Ana Guerrero López <ana@debian.org>:
    - Fix diaglogs
    - Line breaks in dialog message  (with Miriam Ruiz)
    - Enhance dialog strings
    - Fix calendar string format
    - Report as ical
    - Export to ical

    from  Miriam Ruiz <little_miry@yahoo.es>:
    - Use hashlib when saving / loading
    - Fix spelling

    from Olly Betts <olly@survex.com> (as per https://bugs.debian.org/758955)
    - Update for wxPython 3.0
    - Fix initial size of main window

    from Konstantin L. Metlov <metlov@donfti.ru>
    - ported to Python 3 using the 2to3 script
    - reformatted the sources using autopep8
    - ported to wxGTK 4
    - fixed the encryption (to stay compatible with Python 2 version)

#====================================================
#	Cycle - calendar for women
#	Distributed under GNU Public License
# Author: Oleg S. Gints (altgo@users.sourceforge.net)
# Home page: http://cycle.sourceforge.net
#===================================================
0.3.1 (15.09.2005)
    - change to Python 2.4 - repleace rotor module
    - restore old default color scheme
    - The description of the program in English from
      Marco Papa Manzillo<mpapamanz@users.sourceforge.net> is corrected
    - Now the name of the user is stored in a file with data.
    
    from  Miriam Ruiz <little_miry@yahoo.es>: